k8s/working/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: app1
spec:
  mtls:
    mode: STRICT
