k8s/working/6-rancher-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rancher-service-entry
  namespace: app1
spec:
  hosts:
  - "www.rancher.com"
  - "rancher.com"
  exportTo:
  - "."
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
