k8s/working/rancher-service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rancher-service-entry
  namespace: istio-system
spec:
  hosts:
  - www.rancher.com
  - rancher.com
  exportTo:
  - "api1"
  - "api2"
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
