k8s/working/2-deny-authpol.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: default-deny
 namespace: istio-system
spec:
  {}
