k8s/working/3-allow-istio-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-istio-ingress
  namespace: app1
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: demo
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
