k8s/working/5-allow-cross-namespace.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-cross-namespace
  namespace: app2
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: demo
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/app1/sa/default"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/status"]
    # when:
    # - key: request.headers[X-Auth-Token]
    #   values: ["sup3r_s3cr3t"]
