k8s/working/deny-authpol.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: default-deny
 namespace: app1
spec:
  {}
